# FastAPI_TO_DO_LIST

./: .env-non-dev.example  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/dao/: basedao.py  helper.py
app/logs/: helper.py
app/missions/: dao.py  model.py  router.py  schemas.py
app/tests/: conftest.py  mock_missions.json  mock_users.json
app/tests/integration_tests/test_missions/: test_missions_api.py
app/tests/integration_tests/test_users/: test_users_api.py
app/users/: auth.py  dao.py  dependencies.py  model.py  router.py  schemas.py
migrations/: env.py
migrations/versions/: e3ceab7fc833_created_tables_missions_and_users.py
